Don't set fixed card height on mobile (fixes #5)

--- a/rogue-thi-app/styles/Home.module.css
+++ b/rogue-thi-app/styles/Home.module.css
@@ -1,8 +1,10 @@
-/* custom card deck because default is not responsive */
-.cardDeck {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 1fr;
+@media (min-width: 768px) {
+  /* custom card deck because default is not responsive */
+  .cardDeck {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
+  }
 }
 
 .card {
